# MultisigContract-SEI

./: Cargo.toml  README.md
contracts/multisig/: Cargo.toml  build.sh
contracts/multisig/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  test.rs
contracts/multisig_factory/: Cargo.toml  build.sh
contracts/multisig_factory/src/: contract.rs  error.rs  msg.rs  state.rs
