[package]
name = "multisig"
version = "0.1.0"
edition = "2021"
authors = ["Yuma Hayashi <piscesyuma@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = "1.5.2"
cosmwasm-std = "1.5.2"
cosmwasm-storage = "1.5.2"
cw-storage-plus = "1.2.0"
cw-utils = "1.0.3"
cw0 = "0.10.3"
cw2 = "1.1.2"
cw3 = "1.1.2"
schemars = "0.8.16"
serde = { version = "1.0.195", features = ["derive"], default-features = false }
thiserror = "1.0.56"

[dev-dependencies]
cw-multi-test = "0.20.0"
cw20 = "1.1.2"
cw20-base = "1.1.2"
